--- a/excel-tracker-application/src/styles/Dashboard.css
+++ b/excel-tracker-application/src/styles/Dashboard.css
@@ -2,4 +2,6 @@
 .Dashboard {
     background-image: url('./../assets/images/bg.png');
     background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: bottom;
 }
