--- a/excel-tracker-application/src/styles/Register.css
+++ b/excel-tracker-application/src/styles/Register.css
@@ -3,8 +3,16 @@
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: bottom;
-    text-align: center;
+
+    height: 80vh;
+    font-family: Roboto;
+
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 80vh;
+}
+
+h1 {
+    text-decoration: underline;
 }
