--- a/excel-tracker-application/src/styles/Dashboard.css
+++ b/excel-tracker-application/src/styles/Dashboard.css
@@ -1,5 +1,4 @@
-
-.Dashboard {
+body {
     background-image: url('./../assets/images/bg.png');
     background-size: 100%;
     background-repeat: no-repeat;
