--- a/excel-tracker-application/src/styles/UserCard.css
+++ b/excel-tracker-application/src/styles/UserCard.css
@@ -1,7 +1,7 @@
 .userCard {
     width: 80%;
     height: 10vh;
-    border: 3px solid black;
+    border: 3px solid #003057;
     padding: 3px;
     margin: 2px;
 }
