--- a/excel-tracker-application/src/styles/UserDetails.css
+++ b/excel-tracker-application/src/styles/UserDetails.css
@@ -4,10 +4,9 @@
 
 }
 
-.tc {
+.udtc {
     display: grid;
-    justify-content: center;
-    grid-template-columns: 1000px;
+    grid-template-columns: 50% 50%;
     margin-left: 100px;
     width: 100%;
 }
