--- a/excel-tracker-application/src/styles/Users.css
+++ b/excel-tracker-application/src/styles/Users.css
@@ -1,16 +1,22 @@
-.input-bar, .filter, .invite {
-    margin: 35px 70px;
-    width: 100%;
-}
-
 .tc {
-    display: grid;
+    display: flex grid;
     justify-content: center;
     grid-template-columns: 1000px;
-    margin-left: 100px;
-    width: 100%;
+    margin: 10vh 18vw;
+    width: 80%;
 }
 
 h1 {
     color: #003057;
 }
+
+.flex-grid {
+    display: flex;
+    justify-content: center;
+    margin: 35px 18vw;
+}
+
+.flex-grid .col {
+    width: 20%;
+    margin: 10px 5vw;
+  }
