Centered Unassigned button

--- a/excel-tracker-application/src/styles/UserDetails.css
+++ b/excel-tracker-application/src/styles/UserDetails.css
@@ -11,6 +11,13 @@
     width: 100%;
 }
 
+.UD-holder {
+    display: flex;
+
+  align-items: center;
+  justify-content: center;
+}
+
 .UD-header {
   height: 20%;
   display: flex;
