--- a/excel-tracker-application/src/styles/UserDetails.css
+++ b/excel-tracker-application/src/styles/UserDetails.css
@@ -7,7 +7,7 @@
 .udtc {
     display: grid;
     grid-template-columns: 50% 50%;
-    margin-left: 100px;
+    margin-left: 4.2vw;
     width: 100%;
 }
 
