--- a/excel-tracker-application/src/styles/EvaluationCard.css
+++ b/excel-tracker-application/src/styles/EvaluationCard.css
@@ -1,8 +1,8 @@
 .EvaluationCard {
     min-height: 10vh;
     border: 3px solid #003057;
-    padding: 5px;
-    margin: 10px;
+    padding: 10px;
+    margin: 0px 50px 30px 50px;
     font-size: calc(5px + 1vmin);
 
 }
